NIFI-16032 Corrected misordered assertEqual arguments. (#11361)